// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switcher component test should render component 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-3rel02 ant-btn-default ant-btn-sm antv-s2-switcher-entry-button"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="swap"
        class="anticon anticon-swap"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="swap"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="transform: rotate(90deg);"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M847.9 592H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h605.2L612.9 851c-4.1 5.2-.4 13 6.3 13h72.5c4.9 0 9.5-2.2 12.6-6.1l168.8-214.1c16.5-21 1.6-51.8-25.2-51.8zM872 356H266.8l144.3-183c4.1-5.2.4-13-6.3-13h-72.5c-4.9 0-9.5 2.2-12.6 6.1L150.9 380.2c-16.5 21-1.6 51.8 25.1 51.8h696c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </span>
    <span>
      行列切换
    </span>
  </button>
</DocumentFragment>
`;

exports[`switcher component test should render custom children 1`] = `
<DocumentFragment>
  <div>
    自定义
  </div>
</DocumentFragment>
`;

exports[`switcher component test should render custom icon 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-3rel02 ant-btn-default ant-btn-sm antv-s2-switcher-entry-button"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="up-circle"
        class="anticon anticon-up-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="up-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M518.5 360.3a7.95 7.95 0 00-12.9 0l-178 246c-3.8 5.3 0 12.7 6.5 12.7H381c10.2 0 19.9-4.9 25.9-13.2L512 460.4l105.2 145.4c6 8.3 15.6 13.2 25.9 13.2H690c6.5 0 10.3-7.4 6.5-12.7l-178-246z"
          />
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
        </svg>
      </span>
    </span>
    <span>
      行列切换
    </span>
  </button>
</DocumentFragment>
`;

exports[`switcher component test should render custom popover props 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-3rel02 ant-btn-default ant-btn-sm antv-s2-switcher-entry-button ant-popover-open custom-popover"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="swap"
        class="anticon anticon-swap"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="swap"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="transform: rotate(90deg);"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M847.9 592H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h605.2L612.9 851c-4.1 5.2-.4 13 6.3 13h72.5c4.9 0 9.5-2.2 12.6-6.1l168.8-214.1c16.5-21 1.6-51.8-25.2-51.8zM872 356H266.8l144.3-183c4.1-5.2.4-13-6.3-13h-72.5c-4.9 0-9.5 2.2-12.6 6.1L150.9 380.2c-16.5 21-1.6 51.8 25.1 51.8h696c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </span>
    <span>
      行列切换
    </span>
  </button>
</DocumentFragment>
`;
